--- a/Fullstack Angular NetCore/Fullstack Angular NetCore.csproj
+++ b/Fullstack Angular NetCore/Fullstack Angular NetCore.csproj
@@ -41,15 +41,13 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\chat\chat.component.ts" />
+    <None Remove="ClientApp\src\app\Interfaces.ts" />
     <None Remove="ClientApp\src\app\message\message.component.ts" />
+    <None Remove="ClientApp\src\app\service\chat.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\chat\chat.component.ts" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ClientApp\src\app\service\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
